--- a/css data.css
+++ b/css data.css
@@ -1,10 +1,21 @@
 
 html
 
-body {background: #000;font-size-adjust: auto; text-align: center;font-family: monospace; color: #ffffff;}
+body {
+  background: #000;
+  text-align: center;
+  font-family: serif;
+  font-size: 20px;
+
+  padding-left: 10%;
+  padding-right: 10%;
+  color: #ffffff;
+  font-size-adjust: auto;
+  justify-content: center;
+}
 
 td {text-align: center;font-family: monospace;; color: #fffffd}
 
 h1,h2 {font-family: monospace;}
 
-p {font-size: 30}
+p {font-size: 20px}
